syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Student {
	rpc GetStudentInfo (StudentModelLookup) returns (StudentModel);
}

message StudentModelLookup {
	int32 studentId = 1;
}

message StudentModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isActive = 4;
	int32 studentIdNumber = 5;
}
